<resources>
    <string name="app_name">project-genuity</string>
    <string name="company_name">Genuity</string>
    <string name="home_page_button">Get Started....</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication_name">Your Name</string>
    <string name="authentication_email">Email</string>
    <string name="authentication_Phnum">Phone Number</string>
    <string name="authentication_password">Password</string>
    <string name="authentication_signup">Create Account</string>
    <string name="authentication_login">Sign In</string>
    <string name="authentication_login_greeting">Welcome Back!</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_greeting">"Welcome,"</string>
    <string name="logoutText_account">Log out</string>
    <string name="eventsButton_account">Your Events</string>
    <string name="dummyText_fields">Lorem Ipsum</string>
    <string name="searchButton_text">Search</string>
    <string name="image_events_description">content_description_media</string>
    <string name="homepage_description">Checkout some upcoming events or search for one</string>
    <string name="detailField_Event">Details</string>
    <string name="locationField_Event">Location</string>
    <string name="userEvents_button_cancel">Cancel</string>
    <string name="homeEvents_capacity">Currently Registered:</string>
    <string name="homeEvents_seperator">/</string>
    <string name="event_cancelButton">Cancel Event</string>
    <string name="joined_event_host">Host</string>
</resources>