<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_white"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textView_signin_intro"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:fontFamily="@font/abeezee"
        android:text="@string/company_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/custom_purple"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="476dp"
        android:layout_marginLeft="65px"
        android:layout_marginRight="65px"
        android:background="@color/custom_orange_light"
        android:orientation="vertical"
        android:paddingLeft="25px"
        android:paddingTop="70px"
        android:paddingEnd="45px"
        android:paddingRight="25px">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_name" />

        <EditText
            android:id="@+id/editText_signin_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65px"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_email" />

        <EditText
            android:id="@+id/editText_signin_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65px"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_Phnum" />

        <EditText
            android:id="@+id/editText_signin_Phnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65px"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_password" />

        <EditText
            android:id="@+id/editText_signin_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65px"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button_createAcc_signin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70px"
            android:text="@string/authentication_signup"
            android:textAllCaps="false"
            android:textColor="@color/custom_black" />

    </LinearLayout>

    <Button
        android:id="@+id/button_logIn_signin"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="175px"
        android:backgroundTint="@color/custom_blue"
        android:text="@string/authentication_login"
        android:textColor="@color/custom_blue_light" />
</LinearLayout>