<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".AccountActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_account_dark" />

    <TextView
        android:id="@+id/textView_name_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/dummyText_fields"
        android:textAlignment="center"
        android:textColor="@color/custom_black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView_emailField_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/authentication_email"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_email_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummyText_fields"
        android:textColor="@color/custom_black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_phoneField_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/authentication_Phnum"
        android:textColor="@color/custom_black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_phone_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="270dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/dummyText_fields"
        android:textColor="@color/custom_black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_events_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/custom_blue"
        android:text="@string/eventsButton_account"
        android:textColor="@color/custom_blue_light" />

    <Button
        android:id="@+id/button_logout_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/custom_orange"
        android:text="@string/logoutText_account"
        android:textColor="@color/custom_white" />

</LinearLayout>