<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventPageActivity">

    <LinearLayout
        android:id="@+id/linearLayout_event_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#CECED6"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/button_eventPage_info"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:icon="@android:drawable/ic_menu_info_details"
            app:iconGravity="textEnd"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView_eventPage_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/abeezee"
            android:text="@string/dummyText_fields"
            android:textColor="@color/custom_white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_eventPage_hostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abeezee"
            android:text="@string/dummyText_fields"
            android:textColor="@color/custom_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_eventPage_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/dummyText_fields"
            android:textColor="@color/custom_white"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/textView_eventPage_detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingBottom="10dp"
            android:text="@string/detailField_Event"
            android:textColor="@color/custom_orange"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView_eventPage_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/dummyText_fields"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView_eventPage_locationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:paddingBottom="10dp"
            android:text="@string/locationField_Event"
            android:textColor="@color/custom_orange"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView_eventPage_locationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/dummyText_fields"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_eventPage_capacityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/homeEvents_capacity" />

            <TextView
                android:id="@+id/textView_eventPage_currRegistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummyText_fields" />

            <TextView
                android:id="@+id/textView_eventPage_seperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/homeEvents_seperator" />

            <TextView
                android:id="@+id/textView_eventPage_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummyText_fields" />
        </LinearLayout>

        <Button
            android:id="@+id/button_eventPage_join"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="Join Event"
            android:textColor="@color/custom_purple" />

        <Button
            android:id="@+id/button_eventPage_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/event_cancelButton"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>