<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserEventsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_event_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/custom_blue_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/imageView_userEvents"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:contentDescription="@string/image_events_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="281dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/user_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/dummyText_fields"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/custom_orange"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_event_host"
                    android:layout_width="301dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/dummyText_fields"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/custom_orange_light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_event_datetime"
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/dummyText_fields"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/custom_orange_light" />

                <TextView
                    android:id="@+id/user_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/dummyText_fields"
                    android:textColor="@color/custom_orange"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_userEvents_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:backgroundTint="#FF0000"
                    android:text="@string/userEvents_button_cancel" />

            </LinearLayout>

            <!-- Buttons -->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>